Redesigned content CSS to fix overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -4,23 +4,18 @@ body {
   font-family: Arial, sans-serif;
 }
 
-.container {
-  height: 100vh;
-  max-width: 100vw;
-}
-
-.aboutContent {
-  background-image: url('/homePage.jpg');
-  background-size: cover;
-}
-
-/* .contactForm {
-  min-height: 100vh;
+#app {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-} */
+  width: 100vw;
+  height: 100vh;
+}
+.pageContent {
+  display: flex;
+  flex: 1;
+  overflow-y: auto;
+  flex-direction: column;
+}
 
 footer {
   width: 100%;
